--- a/package.json
+++ b/package.json
@@ -22,7 +22,10 @@
   "bugs": {
     "url": "https://github.com/pauloedurezende/statikstack-project-generator/issues"
   },
-  "dependencies": {},
+  "dependencies": {
+    "inquirer": "6.2.0",
+    "simple-git": "1.96.0"
+  },
   "devDependencies": {
     "eslint": "4.19.1",
     "eslint-config-airbnb-base": "13.1.0",
