--- a/package.json
+++ b/package.json
@@ -7,6 +7,9 @@
   "keywords": [
     "node"
   ],
+  "bin": {
+    "ss-generator": "./src/index.js"
+  },
   "main": "src/index.js",
   "files": [
     "src"
