--- a/package.json
+++ b/package.json
@@ -26,8 +26,7 @@
     "url": "https://github.com/pauloedurezende/statikstack-project-generator/issues"
   },
   "dependencies": {
-    "inquirer": "6.2.0",
-    "simple-git": "1.96.0"
+    "inquirer": "6.2.0"
   },
   "devDependencies": {
     "eslint": "4.19.1",
