--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "node"
   ],
   "bin": {
-    "ss-generator": "./src/index.js"
+    "statik": "./src/index.js"
   },
   "scripts": {
     "lint": "eslint src/**/*.js",
