--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
     "url": "https://github.com/pauloedurezende/statikstack-cli/issues"
   },
   "dependencies": {
-    "inquirer": "6.2.0"
+    "inquirer": "6.2.0",
+    "lodash": "4.17.10",
+    "node-fetch": "2.2.0"
   },
   "devDependencies": {
     "eslint": "4.19.1",
