--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "url": "https://github.com/pauloedurezende/statikstack-cli/issues"
   },
   "dependencies": {
+    "async": "2.6.1",
     "inquirer": "6.2.0",
     "lodash": "4.17.10",
     "node-fetch": "2.2.0"
